--- a/test.html
+++ b/test.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <head>
  <title>Portfolio Mohamed Sellami</title>
+   
+        <!-- add icon link -->
+        <link rel = "icon" href = 
+"./images/logo.png" 
+        type = "image/x-icon">
 </head>
 <body>
-    <!-- navbar -->
+<!-- navbar -->
     <nav>
-        <a href="#home"> home </a>
-        <a href="#about"> about </a>
-        <a href="#work"> work </a>
-        <a href="#resume"> resume </a>
-        <a href="#contact"> contact </a>
+        <ul>
+            <li><a href="#home"> home </a></li>     
+            <li><a href="#about"> about </a></li>
+            <li><a href="#work"> work </a></li>
+            <li><a href="#resume"> resume </a></li>
+            <li><a href="#contact"> contact </a></li>
+        </ul>
         </nav> 
-    
-    <!-- main banner -->
+<!-- Entête -->        
     <header id="home">          
                 <h2>Hi, it's me Mohamed Sellami </h2>
                 <p>I am an engineer from <b>Tunisia</b></p>
                 <audio controls>
-                    <source src="C:\Users\Mohamed\Desktop\GoMyCode training\HTML CHECKPOINT\video et sound\bada2na.mp3" type="audio/mp3">
+                    <source src="./video et sound/bada2na.mp3" type="audio/mp3">
                         Please Check the audio Extension
                 </audio>
     </header>  
 
+<!-- main banner -->
+<main>
     <!-- about section-->
     <section id="about">
-        <img src="C:\Users\Mohamed\Desktop\GoMyCode training\HTML CHECKPOINT\me.jpg" alt="image"  width="320" height="320">
+        <img src="./me.jpg" alt="image"  width="320" height="320">
         <h1>About</h1>
         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</p>
         <h3>personal datas</h3>
@@ -82,7 +90,7 @@
         <a name="contact"></a>
         <h1>Contact us</h1>
     </section>
-
+</main>
 
     <footer>
         W3Schools is optimized for learning and training. Examples might be simplified to improve reading and learning. Tutorials, references, and examples are constantly reviewed to avoid errors, but we cannot warrant full correctness of all content. While using W3Schools, you agree to have read and accepted our terms of use, cookie and privacy policy.
